--- a/index.css
+++ b/index.css
@@ -5,6 +5,17 @@ html, body {
 }
 
 /* =================
+    Layout
+   ================= */
+
+main {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr;
+
+}
+
+/* =================
     Article Card 
    ================= */
    
