--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ main {
 
 @media (min-width: 500px) {
     main {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
     } 
     .technology {
         grid-column: span 2;
