Style for laptop users

--- a/index.css
+++ b/index.css
@@ -29,6 +29,32 @@ main {
     } 
 }
 
+@media (min-width: 870px) {
+    main {
+        grid-template-columns: repeat(12, 1fr);
+    }
+    
+    .technology {
+        grid-column: 1 / 7;
+    }
+    
+    .environment {
+        grid-column: 7 / 10;
+    }
+     
+    .nasa {
+        grid-column: 10 / -1;
+    }
+    
+    .physics { 
+        grid-column: 1 / 4;
+    }
+    
+    .health {
+        grid-column: 4 / 10;
+    }
+}
+
 /* =================
     Article Card 
    ================= */
