Update code to use grid-template-areas

--- a/index.css
+++ b/index.css
@@ -4,61 +4,70 @@ html, body {
     font-family: 'Manrope', sans-serif;
 }
 
+body {
+    margin: 1em;
+}
+
 /* =================
     Layout
    ================= */
+   
+.technology {
+    grid-area: tech;
+}
+
+.environment {
+    grid-area: envi;
+}
+    
+.nasa {
+    grid-area: nasa;
+}
+
+.physics {
+    grid-area: phys; 
+}
+
+.health {
+    grid-area: heal;
+} 
 
 main {
     display: grid;
     gap: 1em;
     grid-template-columns: 1fr;
+    grid-template-areas: 
+        "tech"
+        "envi"
+        "nasa"
+        "phys"
+        "heal";
 }
 
 @media (min-width: 500px) {
     main {
-        grid-template-columns: repeat(2, 1fr);
-    } 
-    .technology {
-        grid-column: span 2;
-    }
-    .nasa {
-        grid-row: span 2;
-    }
-    .health {
-        grid-column: span 2;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+            "tech tech"
+            "envi nasa"
+            "phys nasa"
+            "heal heal";
     } 
 }
 
 @media (min-width: 870px) {
     main {
         grid-template-columns: repeat(12, 1fr);
-    }
-    
-    .technology {
-        grid-column: 1 / 7;
-    }
-    
-    .environment {
-        grid-column: 7 / 10;
-    }
-     
-    .nasa {
-        grid-column: 10 / -1;
-    }
-    
-    .physics { 
-        grid-column: 1 / 4;
-    }
-    
-    .health {
-        grid-column: 4 / 10;
+        grid-template-areas: 
+            "tech tech tech tech tech tech envi envi envi nasa nasa nasa"
+            "phys phys phys heal heal heal heal heal heal nasa nasa nasa";
     }
 }
 
 /* =================
     Article Card 
    ================= */
-   
+
 a:hover, a:focus {
     filter: brightness(0.9);
 }
