--- a/index.css
+++ b/index.css
@@ -4,70 +4,91 @@ html, body {
     font-family: 'Manrope', sans-serif;
 }
 
+/* =================
+    Site Layout 
+   ================= */
+
 body {
-    margin: 1em;
+    display: grid;
+    grid-template-columns: 1em 1fr 1em;
+    gap: 1em 0;
+    grid-template-areas: 
+        ".... .... ...."
+        ".... head ...."
+        ".... main ...."
+        ".... foot ...."
+        ".... .... ....";
+}
+
+.site-header {
+    grid-area: head;
+}
+
+footer {
+    grid-area: foot;
 }
 
 /* =================
-    Layout
+    Main Element Layout 
    ================= */
    
-.technology {
-    grid-area: tech;
-}
-
-.environment {
-    grid-area: envi;
-}
-    
-.nasa {
-    grid-area: nasa;
-}
-
-.physics {
-    grid-area: phys; 
-}
-
-.health {
-    grid-area: heal;
-} 
-
 main {
     display: grid;
     gap: 1em;
+    grid-area: main;
     grid-template-columns: 1fr;
     grid-template-areas: 
         "tech"
         "envi"
         "nasa"
         "phys"
-        "heal";
+        "heal";     
 }
 
-@media (min-width: 500px) {
+@media(min-width: 500px) {
     main {
         grid-template-columns: 1fr 1fr;
         grid-template-areas: 
             "tech tech"
             "envi nasa"
             "phys nasa"
-            "heal heal";
+            "heal heal"
     } 
 }
-
-@media (min-width: 870px) {
+   
+@media(min-width: 870px){
     main {
         grid-template-columns: repeat(9, 1fr) repeat(3, minmax(70px, 1fr));
         grid-template-areas: 
             "tech tech tech tech tech tech envi envi envi nasa nasa nasa"
-            "phys phys phys heal heal heal heal heal heal nasa nasa nasa";
+            "phys phys phys heal heal heal heal heal heal nasa nasa nasa"
     }
+}
+
+.technology {
+    grid-area: tech;
+}
+    
+.environment {
+    grid-area: envi;
+}
+
+.nasa {
+    grid-area: nasa;
+}
+
+.physics { 
+    grid-area: phys;
+}
+
+.health {
+    grid-area: heal;
 }
 
 /* =================
     Article Card 
    ================= */
-
+   
 a:hover, a:focus {
     filter: brightness(0.9);
 }
